implemented GetPost handler
